#2720: number of color fixes in dark mode

--- a/dashboard-prime/public/themes/skills-dark-green/theme.css
+++ b/dashboard-prime/public/themes/skills-dark-green/theme.css
@@ -9877,8 +9877,5 @@
     color: #030712;
   }
 }
-.text-color-success {
-  color: #6ee7b7 !important;
-}
 
 /*# sourceMappingURL=theme.css.map */
