--- a/dashboard-prime/public/themes/skills-light-green/theme.css
+++ b/dashboard-prime/public/themes/skills-light-green/theme.css
@@ -9867,8 +9867,5 @@
     color: #ffffff;
   }
 }
-.text-color-success {
-  color: #136c34 !important;
-}
 
 /*# sourceMappingURL=theme.css.map */
